fixing icon not showing up bug

--- a/app/assets/stylesheets/components/_iconsmind.scss
+++ b/app/assets/stylesheets/components/_iconsmind.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'iconsmind';
-  src:font-url('iconsmind.eot') format('embedded-opentype');
-  src:font-url('iconsmind.woff') format('woff'),
+  src:font-url('iconsmind.eot?#iefix-rdmvgc') format('embedded-opentype'),
+    font-url('iconsmind.woff') format('woff'),
     font-url('iconsmind.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
